--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@vkontakte/icons": "^3.28.0",
     "next": "16.0.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "sass": "^1.94.2"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
