--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vkontakte/icons": "^3.28.0",
+    "mongodb": "^6.10.0",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
